--- a/templates/about.html
+++ b/templates/about.html
@@ -46,20 +46,19 @@
             <div class="col-6 col-xl-2">
                 <h1 class="mb-0 site-logo"><a href=" {% static 'index.html' %} " class="text-black mb-0">Farm<span
                         class="text-primary">Zone</span> </a></h1>
-            </div>
+            </div>"contact.html"
             <div class="col-12 col-md-10 d-none d-xl-block">
                 <nav class="site-navigation position-relative text-right" role="navigation">
 
                     <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-                        <li><a href=" {% static 'index.html' %} ">Home</a></li>
-                        <li><a href=" {% static 'listings.html' %} ">Marketplace</a></li>
-                        <li class="active"><a href=" {% static 'about.html' %} ">About Farmzone</a></li>
-                        <li><a href=" {% static 'blog.html' %} ">Forum</a></li>
-                        <li><a href=" {% static 'contact.html' %} ">Contact</a></li>
-
-                        <li class="ml-xl-3 login"><a href=" {% static 'login.html' %} "><span
+                        <li><a href="{% url 'farmzoneweb:index' %}">Home</a></li>
+                        <li><a href="{% url 'farmzoneweb:marketplace' %}">Marketplace</a></li>
+                        <li class="active"><a href="{% url 'farmzoneweb:about' %}">About Farmzone</a></li>
+                        <li><a href="{% url 'farmzoneweb:forum' %}">Forum</a></li>
+                        <li><a href="{% url 'farmzoneweb:contact' %}">Contact</a></li>
+                        <li class="ml-xl-3 login"><a href="{% url 'farmzoneweb:login' %}"><span
                                 class="border-left pl-xl-4"></span>Log In</a></li>
-                        <li><a href=" {% static 'register.html' %} ">Register</a></li>
+                        <li><a href="{% url 'farmzoneweb:register' %}">Register</a></li>
 
                         <li><a href="#" class="cta"><span
                                 class="bg-primary text-white rounded">+ Sell an Item/Service</span></a></li>
