--- a/templates/index.html
+++ b/templates/index.html
@@ -52,14 +52,14 @@
 
                     <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="listings.html">Marketplace</a></li>
-                        <li><a href="about.html">About Farmzone</a></li>
-                        <li><a href="blog.html">Forum</a></li>
-                        <li><a href=" {contact.html">Contact</a></li>
+                        <li><a href="{% url 'farmzoneweb:marketplace' %}">Marketplace</a></li>
+                        <li><a href="{% url 'farmzoneweb:about' %}">About Farmzone</a></li>
+                        <li><a href="{% url 'farmzoneweb:forum' %}">Forum</a></li>
+                        <li><a href="{% url 'farmzoneweb:contact' %}">Contact</a></li>
 
-                        <li class="ml-xl-3 login"><a href="login.html"><span class="border-left pl-xl-4"></span>Log
+                        <li class="ml-xl-3 login"><a href="{% url 'farmzoneweb:login' %}"><span class="border-left pl-xl-4"></span>Log
                             In</a></li>
-                        <li><a href="register.html">Register</a></li>
+                        <li><a href="{% url 'farmzoneweb:register' %}">Register</a></li>
 
                         <li><a href="#" class="cta"><span class="bg-primary text-white rounded">+ Sell an Item/Service</span></a></li>
                     </ul>
